Refinamento de telas de cadastro no frontend e adicionada nova feature de valor de livros

--- a/frontend/src/app/components/lists/booklist/booklist.component.html
+++ b/frontend/src/app/components/lists/booklist/booklist.component.html
@@ -1,6 +1,6 @@
 <h2>Listagem de Livros</h2>
 
-<button class="btn btn-primary" routerLink="/book"><i class="bi bi-plus-circle"></i> Novo</button>
+<button class="btn btn-primary float-end" routerLink="/book"><i class="bi bi-plus-circle"></i> Novo</button>
 
 <table class="table">
     <thead>
