--- a/frontend/src/app/components/lists/subjectlist/subjectlist.component.html
+++ b/frontend/src/app/components/lists/subjectlist/subjectlist.component.html
@@ -1,6 +1,6 @@
 <h2>Listagem de Assunto</h2>
 
-<button class="btn btn-primary" routerLink="/subject"><i class="bi bi-plus-circle"></i> Novo</button>
+<button class="btn btn-primary float-end" routerLink="/subject"><i class="bi bi-plus-circle"></i> Novo</button>
 
 <table class="table">
     <thead>
