--- a/frontend/src/app/components/registers/author/author.component.html
+++ b/frontend/src/app/components/registers/author/author.component.html
@@ -1,11 +1,23 @@
-<h2>Cadastro de Autor</h2>
-
-<form #author="ngForm" (ngSubmit)="save(author)">
-    <div class="form-group">
-        <div class="mb-3">
-            <label for="name" class="form-label">Nome:</label>
-            <input name="name" type="text" class="form-control" id="name" placeholder="ex: João Carlos" required ngModel>
+<form [formGroup]="form">
+    <div class="col-md-12">
+        <div class="row">
+            <h2>Cadastro de Autor</h2>
+        </div>
+        <div class="form-group">
+            <div class="row">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Nome:</label>
+                    <input id="name" class="form-control" type="text" placeholder="ex: João Carlos" required
+                        formControlName="name" maxlength="40">
+                </div>
+                <small class="m-0 p-0"
+                    *ngIf="(form?.controls?.name?.errors?.['required'] || !form?.controls?.name?.valid) && (form?.controls?.name?.dirty || form?.controls?.name?.touched)">
+                    O campo deve ser preenchido!
+                </small>
+            </div>
+            <div class="row">
+                <button class="btn btn-primary" (click)="onSubmit()" [disabled]="!form.valid">Salvar</button>
+            </div>
         </div>
     </div>
-    <input class="btn btn-primary" type="submit" value="Salvar">
 </form>
