--- a/frontend/src/app/components/registers/book/book.component.html
+++ b/frontend/src/app/components/registers/book/book.component.html
@@ -1,37 +1,129 @@
-<form>
-    <h2>Cadastro de Livro</h2>
-    <div class="form-group">
-        <div class="mb-3">
-            <label for="title" class="form-label">Título:</label>
-            <input name="title" type="text" class="form-control" id="title" placeholder="ex: Arquiteura Limpa" required>
-        </div>
-        <div class="mb-3">
-            <label for="publisher" class="form-label">Editora:</label>
-            <input name="publisher" type="text" class="form-control" id="publisher" placeholder="ex: Saraiva" required>
-        </div>
-        <div class="mb-3">
-            <label for="edition" class="form-label">Edição:</label>
-            <input name="edition" type="number" class="form-control" id="edition" placeholder="ex: 1" required>
-        </div>
-        <div class="mb-3">
-            <label for="yearofpublication" class="form-label">Ano de Publicação:</label>
-            <input name="yearofpublication" type="text" class="form-control" id="yearofpublication"
-                placeholder="ex: 2015" required ngModel>
-        </div>
-        <div class="mb-3">
-            <label for="author" class="form-label">Autor:</label>
-            <select name="author" class="form-select" id="author" aria-label="Default select example" required>
-                <option *ngFor="let item of autor" value="{{item.authorId}}">
-                    {{ item.name }}
-            </select>
-        </div>
-        <div class="mb-3">
-            <label for="subject" class="form-label">Assunto:</label>
-            <select name="subject" class="form-select" id="subject" aria-label="Default select example" required>
-                <option *ngFor="let item of assunto" value="{{item.subjectId}}">
-                    {{ item.description }}
-            </select>
+<form [formGroup]="form">
+    <div class="col-md-12">
+        <div class="form-group">
+            <div class="row">
+                <h2>Cadastro de Livro</h2>
+            </div>
+            <div class="row">
+                <div class="mb-3">
+                    <label for="title" class="form-label">Título:</label>
+                    <input name="title" type="text" class="form-control" id="title" placeholder="ex: Arquiteura Limpa"
+                        required formControlName="title" maxlength="40">
+                </div>
+                <small class="m-0 p-0"
+                    *ngIf="(form?.controls?.title?.errors?.['required'] || !form?.controls?.title?.valid) && (form?.controls?.title?.dirty || form?.controls?.title?.touched)">
+                    O campo deve ser preenchido!
+                </small>
+            </div>
+            <div class="row">
+                <div class="mb-3">
+                    <label for="publisher" class="form-label">Editora:</label>
+                    <input name="publisher" type="text" class="form-control" id="publisher" placeholder="ex: Saraiva"
+                        required formControlName="publisher" maxlength="40">
+                </div>
+                <small class="m-0 p-0"
+                    *ngIf="(form?.controls?.publisher?.errors?.['required'] || !form?.controls?.publisher?.valid) && (form?.controls?.publisher?.dirty || form?.controls?.publisher?.touched)">
+                    O campo deve ser preenchido!
+                </small>
+            </div>
+            <div class="row">
+                <div class="mb-3">
+                    <label for="edition" class="form-label">Edição:</label>
+                    <input name="edition" type="number" class="form-control" id="edition" placeholder="ex: 1" required
+                        formControlName="edition">
+                </div>
+                <small class="m-0 p-0"
+                    *ngIf="(form?.controls?.edition?.errors?.['required'] || !form?.controls?.edition?.valid) && (form?.controls?.edition?.dirty || form?.controls?.edition?.touched)">
+                    O campo deve ser preenchido!
+                </small>
+            </div>
+            <div class="row">
+                <div class="mb-3">
+                    <label for="yearOfPublication" class="form-label">Ano de Publicação:</label>
+                    <input name="yearOfPublication" type="text" class="form-control" id="yearOfPublication"
+                        placeholder="ex: 2015" required formControlName="yearOfPublication" minlength="4" maxlength="4"
+                        oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');">
+                </div>
+                <small class="m-0 p-0"
+                    *ngIf="(form?.controls?.yearOfPublication?.errors?.['required'] || !form?.controls?.yearOfPublication?.valid) && (form?.controls?.yearOfPublication?.dirty || form?.controls?.yearOfPublication?.touched)">
+                    O campo deve ser corretamente!
+                </small>
+            </div>
+            <div class="row">
+                <div class="mb-3">
+                    <label for="author" class="form-label">Autor:</label>
+                    <select name="author" class="form-select" id="author" aria-label="Default select example" required
+                        multiple formControlName="bookAuthor" placement="right"
+                        ngbTooltip="Para selecionar mais de um autor, segure ctrl.">
+                        <option *ngFor="let item of autor" value="{{item.authorId}}">
+                            {{ item.name }}
+                    </select>
+                </div>
+                <small class="m-0 p-0"
+                    *ngIf="(form?.controls?.bookAuthor?.errors?.['required'] || !form?.controls?.bookAuthor?.valid) && (form?.controls?.bookAuthor?.dirty || form?.controls?.bookAuthor?.touched)">
+                    O campo deve ser preenchido!
+                </small>
+            </div>
+            <div class="row">
+                <div class="mb-3">
+                    <label for="subject" class="form-label">Assunto:</label>
+                    <select name="subject" class="form-select" id="subject" required multiple
+                        formControlName="bookSubject" placement="right"
+                        ngbTooltip="Para selecionar mais de um assunto, segure ctrl.">
+                        <option *ngFor="let item of assunto" value="{{item.subjectId}}">
+                            {{ item.description }}
+                    </select>
+                </div>
+                <small class="m-0 p-0"
+                    *ngIf="(form?.controls?.bookSubject?.errors?.['required'] || !form?.controls?.bookSubject?.valid) && (form?.controls?.bookSubject?.dirty || form?.controls?.bookSubject?.touched)">
+                    O campo deve ser preenchido!
+                </small>
+            </div>
+            <div class="row">
+                <div class="mb-4">
+                    <label for="origin" >Evento:</label>
+                    <select name="origin" class="form-select" id="origin" formControlName="origin">
+                        <option *ngFor="let item of origin" value="{{item.originPurchaseId}}">
+                            {{ item.name }}
+                    </select>
+                </div>
+                <div class="mb-4">
+                    <label for="value">Valor:</label>
+                    <input name="value" type="text" class="form-control" id="title" placeholder="ex: 10"
+                        formControlName="value" maxlength="40" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');">
+                </div>
+                <div class="mb-4">
+                    <button class="btn btn-primary" (click)="addOriginValue()"><i
+                            class="bi bi-plus-circle-fill"></i></button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="mb-3">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Evento</th>
+                                <th scope="col">Valor</th>
+                                <th scope="col">Ação</th>
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let item of bookvalue">
+                                <td>{{item.originName}}</td>
+                                <td>R$ {{item.value}}</td>
+                                <!-- <td><button class="btn btn-secondary btn-sm"  (click)="update(item.bookId)"><i class="bi bi-pencil"></i> Editar</button></td> -->
+                                <td><button class="btn btn-outline-danger btn-sm"
+                                        (click)="removeOriginValue(item.originPurchaseId)"><i class="bi bi-trash3"></i>
+                                        Excluir</button></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="row">
+                <button class="btn btn-primary" (click)="onSubmit()" [disabled]="!form.valid">Salvar</button>
+            </div>
         </div>
     </div>
-    <input class="btn btn-primary" type="submit" value="Salvar">
 </form>
