--- a/frontend/src/app/components/registers/book/book.component.html
+++ b/frontend/src/app/components/registers/book/book.component.html
@@ -81,19 +81,19 @@
             </div>
             <div class="row">
                 <div class="mb-4">
-                    <label for="origin" >Evento:</label>
+                    <label for="origin" class="form-label">Evento:</label>
                     <select name="origin" class="form-select" id="origin" formControlName="origin">
                         <option *ngFor="let item of origin" value="{{item.originPurchaseId}}">
                             {{ item.name }}
                     </select>
                 </div>
                 <div class="mb-4">
-                    <label for="value">Valor:</label>
+                    <label for="value" class="form-label">Valor:</label>
                     <input name="value" type="text" class="form-control" id="title" placeholder="ex: 10"
                         formControlName="value" maxlength="40" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');">
                 </div>
                 <div class="mb-4">
-                    <button class="btn btn-primary" (click)="addOriginValue()"><i
+                    <button [disabled]="!form?.controls?.value?.value || !form?.controls?.origin?.value" class="btn btn-primary" (click)="addOriginValue()"><i
                             class="bi bi-plus-circle-fill"></i></button>
                 </div>
             </div>
