Pequenas correções no frontend

--- a/frontend/src/app/components/registers/book/book.component.html
+++ b/frontend/src/app/components/registers/book/book.component.html
@@ -89,11 +89,16 @@
                 </div>
                 <div class="mb-4">
                     <label for="value" class="form-label">Valor:</label>
-                    <input name="value" type="text" class="form-control" id="title" placeholder="ex: 10"
-                        formControlName="value" maxlength="40" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');">
+                    <div class="input-group">
+                        <span class="input-group-text">R$</span>
+                        <input name="value" type="text" class="form-control" id="title" placeholder="ex: 10"
+                            formControlName="value" maxlength="40"
+                            oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');">
+                    </div>
                 </div>
                 <div class="mb-4">
-                    <button [disabled]="!form?.controls?.value?.value || !form?.controls?.origin?.value" class="btn btn-primary" (click)="addOriginValue()"><i
+                    <button [disabled]="!form?.controls?.value?.value || !form?.controls?.origin?.value"
+                        class="btn btn-primary" (click)="addOriginValue()"><i
                             class="bi bi-plus-circle-fill"></i></button>
                 </div>
             </div>
