--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -10,6 +10,14 @@
         <a class="nav-link" aria-current="page" routerLink="/booklist">Livros</a>
         <a class="nav-link" routerLink="/authorlist">Autor</a>
         <a class="nav-link" routerLink="/subjectlist">Assunto</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Relatórios
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="http://warner-pc11/ReportServer/Pages/ReportViewer.aspx?%2fLibroAutores&rs:Command=Render&rc:Zoom=Page%20Width">Agrupador por Autor e Assunto</a></li>
+          </ul>
+        </li>
       </div>
     </div>
   </div>
