--- a/Backend/Backend/Projeto de Relatórios/LibroAutores.rdl
+++ b/Backend/Backend/Projeto de Relatórios/LibroAutores.rdl
@@ -24,19 +24,7 @@
     <DataSet Name="Autores">
       <Query>
         <DataSourceName>LivroDb</DataSourceName>
-        <CommandText>SELECT DISTINCT
-	au.Nome,
-	l.Titulo,
-	l.Editora,
-	l.Edicao,
-	l.AnoPublicacao,
-	ass.Descricao
-FROM 
-	Autor au
-		inner join LivroAutor lau on au.AutorId = lau.AutorId
-		inner join Livro l on lau.LivroId = l.LivroId
-		inner join LivroAssunto las on las.LivroId = las.LivroId
-		inner join Assunto ass on las.AssuntoId = ass.AssuntoId</CommandText>
+        <CommandText>SELECT * FROM [dbo].[LivroAutores]</CommandText>
       </Query>
       <Fields>
         <Field Name="Nome">
