--- a/frontend/src/app/components/registers/subject/subject.component.html
+++ b/frontend/src/app/components/registers/subject/subject.component.html
@@ -5,6 +5,13 @@
         </div>
         <div class="form-group">
             <div class="row">
+                <div class="col">
+                    <div class="mb-3">
+                        <button class="btn btn-primary float-end" (click)="onSubmit()" [disabled]="!form.valid">Salvar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
                 <div class="mb-3">
                     <label for="description" class="form-label">Descrição:</label>
                     <input id="description" class="form-control" type="text" placeholder="" required
@@ -15,9 +22,7 @@
                     O campo deve ser preenchido!
                 </small>
             </div>
-            <div class="row">
-                <button class="btn btn-primary" (click)="onSubmit()" [disabled]="!form.valid">Salvar</button>
-            </div>
+
         </div>
     </div>
 </form>
